--- a/homework.ipynb
+++ b/homework.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "id": "d40c88a9-576c-4a4e-8f81-f62b8895dc3e",
    "metadata": {
     "tags": []
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "id": "4ca36819-aa41-45cc-804b-2650c10c7976",
    "metadata": {
     "tags": []
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "id": "88d68af0-e999-422d-b9f0-d6ea34e7c35f",
    "metadata": {
     "tags": []
@@ -78,7 +78,7 @@
        "       [ 1,  7]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "id": "9b45a029-a4f2-4d51-95e0-b74c4b5d7a20",
    "metadata": {
     "tags": []
@@ -106,7 +106,7 @@
        "array([2. , 8.4])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "id": "30b47d85-04ab-48d7-82b4-de45f89e71f6",
    "metadata": {
     "tags": []
@@ -146,7 +146,7 @@
        "       [-1. , -1.4]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "id": "01994bf0-14d3-4473-a981-b4cb8361748e",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
        "array([-1.,  0.,  1.,  1., -1.])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "id": "7e05ece9-1ccc-4096-9eb8-57479b321495",
    "metadata": {
     "tags": []
@@ -205,7 +205,7 @@
        "2.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "id": "7aeef8b9-80aa-4ac8-a245-383e3d82e254",
    "metadata": {
     "tags": []
@@ -255,7 +255,7 @@
        "2.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "id": "abe0d464-9b07-4d54-a084-e98bfef0bcee",
    "metadata": {
     "tags": []
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "id": "7c9a0e7d-b856-4c3b-89a0-97b8151e3d60",
    "metadata": {
     "tags": []
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "id": "f92c40d3-4416-4290-ad56-9711e454f98b",
    "metadata": {},
    "outputs": [
@@ -375,7 +375,7 @@
        "2          3  Островский"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 52,
    "id": "b6e06824-9595-4d3f-b56f-60b8dc385b83",
    "metadata": {
     "tags": []
@@ -480,7 +480,7 @@
        "6          3  Таланты и поклонники    200"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "id": "1a60f485-b4b5-4b9e-a20c-3d822550f2a6",
    "metadata": {
     "tags": []
@@ -603,7 +603,7 @@
        "6          3  Островский  Таланты и поклонники    200"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
    "id": "d616192b-beb6-496b-b3c4-eb0c9f8b403b",
    "metadata": {
     "tags": []
@@ -708,7 +708,7 @@
        "3          2       Чехов  Толстый и тонкий    350"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 55,
    "id": "e854ddb6-8678-4d8d-b57c-e4a434dcd843",
    "metadata": {
     "tags": []
@@ -813,7 +813,7 @@
        "Чехов         350  450  400.0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 56,
    "id": "dfbc5d4d-1081-4aa9-8ce7-58facff025e8",
    "metadata": {
     "tags": []
@@ -838,7 +838,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\uc201\\AppData\\Local\\Temp\\ipykernel_22700\\4136075712.py:8: PerformanceWarning: dropping on a non-lexsorted multi-index without a level parameter may impact performance.\n",
+      "C:\\Users\\uc201\\AppData\\Local\\Temp\\ipykernel_13640\\4136075712.py:8: PerformanceWarning: dropping on a non-lexsorted multi-index without a level parameter may impact performance.\n",
       "  authors_stat.drop('price', axis=1, inplace=True)\n"
      ]
     },
@@ -910,7 +910,7 @@
        "2       Чехов       350       450      400.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 57,
    "id": "7acffbe8-3941-4c70-8857-7b58b3d21a37",
    "metadata": {
     "tags": []
@@ -1058,7 +1058,7 @@
        "6          3  Островский  Таланты и поклонники    200   мягкая"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 58,
    "id": "0d51d9bb-4061-4a07-b357-6c14aea097e5",
    "metadata": {
     "tags": []
@@ -1256,96 +1256,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 59,
    "id": "eb73d500-9499-4407-8587-588ef556cfbb",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>cover</th>\n",
-       "      <th>мягкая</th>\n",
-       "      <th>твердая</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>author_name</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Островский</th>\n",
-       "      <td>800.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Тургенев</th>\n",
-       "      <td>700.0</td>\n",
-       "      <td>500.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Чехов</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>800.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "cover        мягкая  твердая\n",
-       "author_name                 \n",
-       "Островский    800.0      NaN\n",
-       "Тургенев      700.0    500.0\n",
-       "Чехов           NaN    800.0"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Делаем сводную таблицу\n",
-    "book_info = pd.pivot_table(\n",
-    "    # Наш датафрейм\n",
-    "    authors_price,\n",
-    "    # Выбираем столбец в качестве индекса\n",
-    "    index = 'author_name',\n",
-    "    # Выбираем столбец, значения которого станут новыми столбцами\n",
-    "    columns='cover',\n",
-    "    # Выбираем столбец, значения которого станут значениями в новых столбцах\n",
-    "    values='price',\n",
-    "    # Функция агрегации (суммирование по столбцам)\n",
-    "    aggfunc='sum'  \n",
-    ")\n",
-    "book_info"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "435aa197-ed38-4496-a046-49051a548012",
    "metadata": {
     "tags": []
    },
@@ -1408,21 +1320,33 @@
        "Чехов             0      800"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Заменяем пропущенные значения на 0 и преобразуем тип данных в int\n",
-    "book_info['мягкая'] = book_info['мягкая'].fillna(0).astype(int)\n",
-    "book_info['твердая'] = book_info['твердая'].fillna(0).astype(int)\n",
+    "# Делаем сводную таблицу\n",
+    "book_info = pd.pivot_table(\n",
+    "    # Наш датафрейм\n",
+    "    authors_price,\n",
+    "    # Выбираем столбец в качестве индекса\n",
+    "    index = 'author_name',\n",
+    "    # Выбираем столбец, значения которого станут новыми столбцами\n",
+    "    columns='cover',\n",
+    "    # Выбираем столбец, значения которого станут значениями в новых столбцах\n",
+    "    values='price',\n",
+    "    # Функция агрегации (суммирование по столбцам)\n",
+    "    aggfunc='sum', \n",
+    "    # Заменяем отсутствующие значения на 0\n",
+    "    fill_value=0\n",
+    ")\n",
     "book_info"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 60,
    "id": "4bc1f08e-7602-403a-9b47-8819f41a95f3",
    "metadata": {
     "tags": []
@@ -1437,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 61,
    "id": "a412ce14-b27a-4aad-9f23-0dd1dbe043c8",
    "metadata": {
     "tags": []
@@ -1501,7 +1425,7 @@
        "Чехов          True     True"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
